[package]
authors = ['polka_oracle <https://github.com/polka_oracle>']
build = 'build.rs'
description = 'A Substrate based chain'
edition = '2018'
license = 'Unlicense'
name = 'polka_oracle'
repository = 'https://github.com/polka_oracle/Parachain'
version = '2.0.0'

[[bin]]
name = 'polka_oracle'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
pallet-contracts = '2.0.0'
pallet-contracts-rpc = '0.8.0'
# local dependencies
polka_oracle-runtime = { path = '../runtime', version = '2.0.0' }
frontier-consensus = { git = 'https://github.com/PureStake/frontier.git', branch = 'substrate-v2' }
frontier-rpc = { git = 'https://github.com/PureStake/frontier.git', branch = 'substrate-v2' }
frontier-rpc-primitives = { git = 'https://github.com/PureStake/frontier.git', branch = 'substrate-v2' }

# Substrate dependencies
frame-benchmarking = '2.0.0'
frame-benchmarking-cli = '2.0.0'
pallet-transaction-payment-rpc = '2.0.0'
sc-basic-authorship = '0.8.0'
sc-cli = { features = ['wasmtime'], version = '0.8.0' }
sc-client-api = '2.0.0'
sc-consensus = '0.8.0'
sc-consensus-aura = '0.8.0'
sc-executor = { features = ['wasmtime'], version = '0.8.0' }
sc-finality-grandpa = '0.8.0'
sc-rpc = '2.0.0'
sc-rpc-api = '0.8.0'
sc-service = { features = ['wasmtime'], version = '0.8.0' }
sc-transaction-pool = '2.0.0'
sp-api = '2.0.0'
sp-block-builder = '2.0.0'
sp-blockchain = '2.0.0'
sp-consensus = '0.8.0'
sp-consensus-aura = '0.8.0'
sp-core = '2.0.0'
sp-finality-grandpa = '2.0.0'
sp-inherents = '2.0.0'
sp-runtime = '2.0.0'
sp-transaction-pool = '2.0.0'
substrate-frame-rpc-system = '2.0.0'

[features]
default = []
runtime-benchmarks = ['polka_oracle-runtime/runtime-benchmarks']
